--- a/app/src/main/res/layout/dialog_select_one.xml
+++ b/app/src/main/res/layout/dialog_select_one.xml
@@ -35,13 +35,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textIsSelectable="true"
+        android:id="@+id/title"
+        style="@style/Dialog.Header.Title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/drag_handle"
+        tools:text="@tools:sample/lorem"
+        />
+
+    <TextView
+        android:id="@+id/message"
+        style="@style/Dialog.Header.Message"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"
         tools:text="@tools:sample/lorem"
         />
 
