--- a/app/src/main/res/menu/edit_book_authors_list.xml
+++ b/app/src/main/res/menu/edit_book_authors_list.xml
@@ -23,9 +23,15 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools">
     <item
-        android:id="@id/MENU_ACTION_CONFIRM"
+        android:id="@id/MENU_ACTION_ADD_DETAILS"
         android:title="x"
-        app:actionLayout="@layout/toolbar_menu_buttons_add2"
+        app:actionLayout="@layout/toolbar_menu_button_add_details"
+        app:showAsAction="always"
+        tools:ignore="HardcodedText" />
+    <item
+        android:id="@id/MENU_ACTION_ADD"
+        android:title="x"
+        app:actionLayout="@layout/toolbar_menu_button_add"
         app:showAsAction="always"
         tools:ignore="HardcodedText" />
 </menu>
