--- a/app/src/main/res/menu/edit_book_series_list.xml
+++ b/app/src/main/res/menu/edit_book_series_list.xml
@@ -33,9 +33,9 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools">
     <item
-        android:id="@id/MENU_ACTION_CONFIRM"
+        android:id="@id/MENU_ACTION_ADD"
         android:title="x"
-        app:actionLayout="@layout/toolbar_menu_buttons_add"
+        app:actionLayout="@layout/toolbar_menu_button_add"
         app:showAsAction="always"
         tools:ignore="HardcodedText" />
 </menu>
