--- a/app/src/main/res/layout/dialog_partial_date_picker_content.xml
+++ b/app/src/main/res/layout/dialog_partial_date_picker_content.xml
@@ -35,7 +35,7 @@
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/dialog_toolbar"
-        style="@style/Toolbar.Dialog.Content"
+        style="@style/Toolbar.Dialog.Floating"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/drag_handle"
