Filters dialog: hide duplicate toolbar buttons when in floating dialog mode

--- a/app/src/main/res/values/menus.xml
+++ b/app/src/main/res/values/menus.xml
@@ -354,7 +354,7 @@
     <item name="MENU_RESET"
           type="id" />
 
-    <!-- Toolbar menu items with an "app:actionLayout" -->
+    <!-- Toolbar menu items with an "app:actionLayout" containing a highlighted Button. -->
     <item name="MENU_ACTION_CLEAR"
           type="id" />
     <item name="MENU_ACTION_SAVE"
