--- a/app/src/main/res/menu/edit_filters.xml
+++ b/app/src/main/res/menu/edit_filters.xml
@@ -22,18 +22,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools">
+    <!--
+        BottomSheet/Fullscreen: show
+        Floating: hide in favour of the "neutral" button on the bottom button bar
+    -->
     <item
         android:id="@id/MENU_ACTION_CLEAR"
         android:title="x"
         app:actionLayout="@layout/toolbar_menu_button_clear"
         app:showAsAction="always"
         tools:ignore="HardcodedText" />
+    <!-- Always shown -->
     <item
         android:id="@id/MENU_ACTION_ADD"
         android:title="x"
         app:actionLayout="@layout/toolbar_menu_button_add"
         app:showAsAction="always"
         tools:ignore="HardcodedText" />
+    <!--
+        BottomSheet/Fullscreen: show
+        Floating: hide in favour of the "positive" button on the bottom button bar
+    -->
     <item
         android:id="@id/MENU_ACTION_SELECT"
         android:title="x"
