- iconTint is now always colorOnSurfaceVariant where an override was needed - notes added on overriding iconTint necessity - remove obsolete endIconTint

--- a/app/src/main/res/values/styles-row-editor.xml
+++ b/app/src/main/res/values/styles-row-editor.xml
@@ -51,7 +51,14 @@
            parent="Widget.Material3.Button.IconButton.Outlined">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="iconTint">?attr/colorOnPrimaryContainer</item>
+        <!-- The default for an IconButton.Outlined seems to be "colorPrimary"
+             which is fine in "light" but not visible in "dark" mode.
+             This problem does not occur for an IconButton.Filled
+             as Android uses a ThemeOverlay where they correct the iconTint
+             But Outlined does not have such a ThemeOverlay set (bug?)
+             Overriding with colorOnSurfaceVariant is a workaround.
+        -->
+        <item name="iconTint">?attr/colorOnSurfaceVariant</item>
         <item name="icon">@drawable/sort_unsorted</item>
         <item name="android:contentDescription">@string/lbl_sorting</item>
     </style>
