set hint/placeholder strings for when the field is empty getValueText now always returns null for 'unset'

--- a/app/src/main/res/layout/row_edit_bookshelf_filter_bitmask.xml
+++ b/app/src/main/res/layout/row_edit_bookshelf_filter_bitmask.xml
@@ -55,6 +55,7 @@
             android:layout_width="match_parent"
             android:layout_marginStart="@dimen/field_margin_start"
             tools:ignore="SelectableText"
+            android:hint="@string/bob_empty_field"
             />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
