--- a/app/src/main/res/layout/row_edit_bookshelf_filter_string_equality.xml
+++ b/app/src/main/res/layout/row_edit_bookshelf_filter_string_equality.xml
@@ -23,11 +23,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/section_margin_top"
-    android:minHeight="?attr/listPreferredItemHeightSmall"
-    >
+    style="@style/RowEditor.Container.Filter">
 
     <Button
         android:id="@+id/btn_del"
@@ -61,7 +57,6 @@
             style="@style/autoCompleteTextEntry"
             android:imeOptions="actionNext"
             tools:ignore="LabelFor"
-            tools:text="@string/warning_nothing_selected"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
