--- a/app/src/main/res/layout/row_edit_style_book_level_column.xml
+++ b/app/src/main/res/layout/row_edit_style_book_level_column.xml
@@ -23,10 +23,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="?attr/listPreferredItemHeightSmall"
-    >
+    style="@style/RowEditor.Container">
 
     <!-- mimic preference screen layout: use a margin-start -->
     <LinearLayout
