--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -102,6 +102,10 @@
             translatable="false">DNB.DE</string>
     <string name="site_info_dnb_de"
             translatable="false">@string/site_description_german_catalogue</string>
+    <string name="site_douban"
+            translatable="false">Douban</string>
+    <string name="site_info_douban"
+            translatable="false">@string/site_description_chinese_catalogue</string>
 
     <!-- https://calibre-ebook.com -->
     <string name="site_calibre"
