--- a/app/src/main/res/xml/preferences_site_searches.xml
+++ b/app/src/main/res/xml/preferences_site_searches.xml
@@ -59,6 +59,12 @@
         </Preference>
 
         <Preference
+            android:fragment="com.hardbacknutter.nevertoomanybooks.searchengines.douban.DoubanPreferencesFragment"
+            android:key="psk_search_site_douban"
+            android:title="@string/site_douban">
+        </Preference>
+
+        <Preference
             android:fragment="com.hardbacknutter.nevertoomanybooks.searchengines.googlebooks.GoogleBooksPreferencesFragment"
             android:key="psk_search_site_googlebooks"
             android:title="@string/site_google_books">
