--- a/app/src/main/res/xml/preferences_site_douban.xml
+++ b/app/src/main/res/xml/preferences_site_douban.xml
@@ -28,6 +28,14 @@
         <SwitchPreference
             android:defaultValue="false"
             android:icon="@drawable/barcode_24px"
+            android:key="douban.search.result.order.by.date"
+            android:summaryOff="@string/pe_search_result_order_first"
+            android:summaryOn="@string/pe_search_result_order_newest"
+            android:title="@string/pt_search_result_order" />
+
+        <SwitchPreference
+            android:defaultValue="false"
+            android:icon="@drawable/barcode_24px"
             android:key="douban.search.byIsbn.prefer.10"
             android:summaryOff="@string/no"
             android:summaryOn="@string/yes"
