--- a/app/src/main/res/layout/activity_startup.xml
+++ b/app/src/main/res/layout/activity_startup.xml
@@ -66,7 +66,7 @@
         android:textIsSelectable="false"
         app:layout_constraintEnd_toEndOf="@id/app"
         app:layout_constraintTop_toBottomOf="@id/app"
-        tools:text="4.5.0"
+        tools:text="x.y.z"
         />
 
     <androidx.constraintlayout.widget.Barrier
