--- a/app/src/main/res/layout/fragment_admin_search.xml
+++ b/app/src/main/res/layout/fragment_admin_search.xml
@@ -29,12 +29,25 @@
     tools:context=".FragmentHostActivity"
     >
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_panel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck"
+        />
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tab_panel"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
