--- a/app/src/main/res/layout-sw800dp-land/booksonbookshelf_content.xml
+++ b/app/src/main/res/layout-sw800dp-land/booksonbookshelf_content.xml
@@ -35,6 +35,7 @@
         android:id="@+id/list"
         android:layout_width="@dimen/bob_embedded_list_width"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintEnd_toStartOf="@id/details_frame"
         app:layout_constraintStart_toStartOf="parent"
