--- a/app/src/main/res/layout/booksonbookshelf_content.xml
+++ b/app/src/main/res/layout/booksonbookshelf_content.xml
@@ -35,6 +35,7 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:listitem="@layout/booksonbookshelf_row_book"
         tools:showIn="@layout/booksonbookshelf"
