edge2edge: disable clipToPadding

--- a/app/src/main/res/layout/fragment_author_works.xml
+++ b/app/src/main/res/layout/fragment_author_works.xml
@@ -33,6 +33,7 @@
         android:layout_height="0dp"
         android:clickable="true"
         android:focusable="true"
+        android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
