--- a/app/src/main/res/layout/fragment_edit_style_groups.xml
+++ b/app/src/main/res/layout/fragment_edit_style_groups.xml
@@ -39,6 +39,7 @@
         android:id="@+id/group_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
