--- a/app/src/main/res/layout/fragment_edit_styles.xml
+++ b/app/src/main/res/layout/fragment_edit_styles.xml
@@ -31,6 +31,7 @@
         android:id="@+id/list"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
