edge2edge: disable clipToPadding

--- a/app/src/main/res/layout/fragment_edit_book_toc.xml
+++ b/app/src/main/res/layout/fragment_edit_book_toc.xml
@@ -57,6 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/section_margin_top"
+            android:clipToPadding="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintBottom_toBottomOf="parent"
