edge2edge: disable clipToPadding

--- a/app/src/main/res/layout/fragment_calibre_library_mapper.xml
+++ b/app/src/main/res/layout/fragment_calibre_library_mapper.xml
@@ -140,6 +140,7 @@
             android:layout_margin="@dimen/container_margin"
             android:nestedScrollingEnabled="true"
             android:visibility="gone"
+            android:clipToPadding="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintBottom_toBottomOf="parent"
