--- a/app/src/main/res/layout-land/fragment_calibre_library_mapper.xml
+++ b/app/src/main/res/layout-land/fragment_calibre_library_mapper.xml
@@ -138,6 +138,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/container_margin"
             android:nestedScrollingEnabled="true"
+            android:clipToPadding="false"
             android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
