--- a/app/src/main/res/layout-land/fragment_book_details.xml
+++ b/app/src/main/res/layout-land/fragment_book_details.xml
@@ -235,7 +235,7 @@
         <TextView
             android:id="@+id/description"
             style="@style/Field.Description"
-            android:background="@drawable/bg_outline"
+            android:background="@drawable/bg_outline_sharp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/barrier_covers_end"
             app:layout_constraintTop_toBottomOf="@id/genre"
