--- a/app/src/main/res/drawable/bg_outline_rounded.xml
+++ b/app/src/main/res/drawable/bg_outline_rounded.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ @Copyright 2018-2024 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -19,24 +19,12 @@
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<!--
-    Screens 'just' larger than the Pixel2.
-
-    Pixel2 - 5.0" (1080 x 1920) - 420dpi - sw411dp
-    port: w411dp h659dp
-    land: w683dp h387dp
--->
-<resources>
-    <dimen name="progress_margin_top">200dp</dimen>
-
-    <dimen name="til_fixed_width_personal_name">360dp</dimen>
-    <dimen name="cbx_fixed_width_author_type">160dp</dimen>
-
-    <item name="context_menu_button_scale"
-          format="float"
-          type="dimen">0.75
-    </item>
-
-    <dimen name="startup_splash_min_width">300dp</dimen>
-    <dimen name="startup_splash_max_width">400dp</dimen>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+       android:shape="rectangle">
+    <solid android:color="?attr/colorSurface" />
+    <stroke
+        android:width="1dp"
+        android:color="?attr/colorOnSurface" />
+    <corners
+        android:radius="@dimen/floating_dialog_corner_radius" />
+</shape>
